--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -9,6 +9,7 @@
     width: 100px;
     height: 100px;
     fill: white;
+    transition: fill $main-animation;
 
     &:hover,
     &:focus{
@@ -27,6 +28,7 @@
     width: 60px;
     height: 60px;
     fill: white;
+    transition: fill $main-animation;
 
     &:hover,
     &:focus {
