--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -15,7 +15,7 @@
     align-items: center;
     padding: 30px;
     transform: translateY(-100%);
-    transition: transform 200ms linear;
+    transition: transform $main-animation;
 }
 
 .menu-fadein {
@@ -33,7 +33,7 @@
     font-size: 36px;
     text-transform: uppercase;
     color: getColor("light-color");
-    transition: color 200ms linear;
+    transition: color $main-animation;
 
     &:hover,
     &:focus {
@@ -46,7 +46,7 @@
     border: none;
     cursor: pointer;
     color: getColor("light-color");
-    transition: color 200ms linear;
+    transition: color $main-animation;
 
     &:hover,
     &:focus{
