--- a/sass/components/_phone-mail.scss
+++ b/sass/components/_phone-mail.scss
@@ -23,7 +23,7 @@
     color: currentColor;
     width: 100%;
     overflow: hidden;
-    transition: color 200ms linear;
+    transition: color $main-animation;
 
     &:hover,
     &focus{
@@ -40,11 +40,18 @@
 }
 
 .phone-mail__text {
-    width: 100%;
+ 
     display: block;
     text-transform: uppercase;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: 600;
     letter-spacing: 0.01rem;
     word-wrap: break-word;
+}
+
+
+@media screen and (min-width: 480px) {
+    .phone-mail__text {
+        font-size: 16px;
+    }
 }
