--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -24,39 +24,31 @@
     }
 }
 
-:root {
-    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    --animation-duration: 250ms;
-}
 
 .gallery {
-    display: grid;
-    max-width: 1140px;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-auto-rows: 240px;
-    grid-gap: 12px;
-    justify-content: center;
-    padding: 0;
-    list-style: none;
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    max-width: 1170;
 }
 
 .gallery__item {
+    flex-basis: 100%;
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-.gallery__image:hover {
-    transform: scale(1.03);
+@media screen and (min-width:768px) {
+    .gallery__item {
+        flex-basis: calc((100% - 30px) / 2)
+    }
 }
 
-.gallery__image {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: transform var(--animation-duration) var(--timing-function);
+@media screen and (min-width:1200px) {
+    .gallery__item {
+        flex-basis: calc((100% - 60px) / 3)
+    }
 }
 
 .gallery__link {
@@ -67,4 +59,15 @@
 
 .gallery__link:hover {
     cursor: zoom-in;
+}
+
+.gallery__image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: transform $main-animation;
+}
+
+.gallery__image:hover {
+    transform: scale(1.03);
 }
