--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -46,11 +46,17 @@
 
 .slider__title{
     color: white;
-    font-size: 48px;
+    font-size: 32px;
     font-weight: 800;
     letter-spacing: 0.01em;
     text-transform: uppercase;
     border-bottom: 1px solid white;   
+}
+
+@media screen and (min-width: 480px) {
+    .slider__title {
+        font-size: 48px;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -61,10 +67,16 @@
 
 .slider__dynamic-span{
     color: white;
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 400;
     letter-spacing: 0.01em;
     text-transform: uppercase;
+}
+
+@media screen and (min-width: 480px) {
+    .slider__dynamic-span{
+        font-size: 24px;
+    }
 }
 
 @media screen and (min-width: 768px) {
